# crewAI-sandbox

./: .gitignore  README.md
shopping/: README.md  pyproject.toml
shopping/src/shopping/: crew.py  main.py
