[project]
name = "shopping"
version = "0.1.0"
description = "shopping using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
shopping = "shopping.main:run"
run_crew = "shopping.main:run"
train = "shopping.main:train"
replay = "shopping.main:replay"
test = "shopping.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
